acvus-mir-test/tests/snapshots/all__inline__a_closure_an_array_also_holds_stays_a_call.snap
---
source: acvus-mir-test/tests/inline.rs
expression: ir
---
=== main ===
     0 |   r0 = closure L0 []
     1 |   assign f = r0
     3 |   r1 = ref &f
     4 |   r2 = call r1(5 (r3))
     5 |   assign a = r2
     6 |   r4 = array_begin capacity=1
     7 |   r5 = take f
     8 |   r6 = array_push r4 r5
     9 |   assign v = r6
    10 |   r7 = take a
    11 |   return r7

    ; r0 (v1) : Fn(i64) -> i64
    ; r1 (f) : &Fn(i64) -> i64
    ; r2 (f(...)) : i64
    ; r3 (v3) : i64
    ; r4 (v7) : Array<Fn(i64) -> i64, 0>
    ; r5 (f) : Fn(i64) -> i64
    ; r6 (v9) : Array<Fn(i64) -> i64, 1>
    ; r7 (a) : i64
    ; r8 (v) : Array<Fn(i64) -> i64, 1>
    ; r9 (a) : i64
    ; r10 (f) : Fn(i64) -> i64

=== closure L0 (ValueId(0)) ===
     0 |   assign x = r0
     1 |   r1 = take x
     3 |   r2 = r1 + 1 (r3)
     4 |   return r2

    ; r0 (v1) : i64
    ; r1 (x) : i64
    ; r2 (v5) : i64
    ; r3 (v4) : i64
    ; r4 (x) : i64
