acvus-mir-test/tests/snapshots/all__inline__a_closure_of_two_blocks_stays_a_call.snap
---
source: acvus-mir-test/tests/inline.rs
expression: ir
---
=== main ===
     0 |   r0 = closure L0 []
     1 |   assign f = r0
     3 |   r1 = ref &f
     4 |   r2 = call r1(5 (r3))
     5 |   return r2

    ; r0 (v1) : Fn(i64) -> i64
    ; r1 (f) : &Fn(i64) -> i64
    ; r2 (f(...)) : i64
    ; r3 (v3) : i64
    ; r4 (f) : Fn(i64) -> i64

=== closure L0 (ValueId(0)) ===
     0 |   assign x = r0
     1 |   r1 = take x
     3 |   r2 = r1 > 0 (r3)
     4 |   if r2 -> L0 else L2 join L1
     5 | L0:
     6 |   r4 = take x
     8 |   r5 = r4 + 1 (r6)
     9 |   jump L1(r5)
    10 | L2:
    11 |   r7 = take x
    13 |   r8 = r7 - 1 (r9)
    14 |   jump L1(r8)
    15 | L1(r10: i64):
    16 |   return r10

    ; r0 (v1) : i64
    ; r1 (x) : i64
    ; r2 (v5) : Bool
    ; r3 (v4) : i64
    ; r4 (x) : i64
    ; r5 (v8) : i64
    ; r6 (v7) : i64
    ; r7 (x) : i64
    ; r8 (v11) : i64
    ; r9 (v10) : i64
    ; r10 (v12) : i64
    ; r11 (x) : i64
