acvus-mir-test/tests/snapshots/all__inline__a_small_pure_closure_called_where_it_was_made_is_its_body.snap
---
source: acvus-mir-test/tests/inline.rs
expression: ir
---
=== main ===
     1 |   assign x = 5 (r0)
     2 |   r1 = take x
     4 |   r2 = r1 + 1 (r3)
     5 |   return r2

    ; r0 (v3) : i64
    ; r1 (x) : i64
    ; r2 (v10) : i64
    ; r3 (v9) : i64
    ; r4 (x) : i64
    ; r5 (f) : Fn(i64) -> i64
    ; r6 (f) : &Fn(i64) -> i64
    ; r7 (v1) : Fn(i64) -> i64
    ; r8 (f(...)) : i64

=== closure L0 (ValueId(0)) ===
     0 |   assign x = r0
     1 |   r1 = take x
     3 |   r2 = r1 + 1 (r3)
     4 |   return r2

    ; r0 (v1) : i64
    ; r1 (x) : i64
    ; r2 (v5) : i64
    ; r3 (v4) : i64
    ; r4 (x) : i64
