acvus-mir-test/tests/snapshots/all__inline__inline_boolean_logic.snap
---
source: acvus-mir-test/tests/inline.rs
expression: ir
---
=== main ===
     2 |   r0 = take $v1
     3 |   if r0 -> L0 else L1 join L2
     4 | L0:
     5 |   r1 = take $v2
     6 |   jump L2(r1)
     7 | L1:
     9 |   jump L2(false (r2))
    10 | L2(r3: Bool):
    11 |   return r3

    ; r0 ($a) : Bool
    ; r1 ($b) : Bool
    ; r2 (v9) : Bool
    ; r3 (v7) : Bool
    ; r4 (both(...)) : Bool
    ; r5 (v1) : Bool
    ; r6 (v2) : Bool
