acvus-mir-test/tests/snapshots/all__inline__inline_callee_reads_context.snap
---
source: acvus-mir-test/tests/inline.rs
expression: ir
---
=== main ===
     0 |   r0 = fetch @count
     1 |   assign @count = r0
     2 |   r1 = take @count
     3 |   r2 = take @count
     4 |   commit @count = r2 (not written)
     5 |   return r1

    ; r0 (@count) : i64
    ; r1 (@count) : i64
    ; r2 (v5) : i64
    ; r3 (get_count(...)) : i64
    ; r4 (@count) : i64
