acvus-mir-test/tests/snapshots/all__inline__inline_callee_takes_lambda_arg.snap
---
source: acvus-mir-test/tests/inline.rs
expression: ir
---
=== main ===
     2 |   r0 = list [1 (r1), 2 (r2)]
     3 |   r3 = call #0(r0)
     4 |   r4 = call #1(r3)
     5 |   r5 = call #2(r4)
     6 |   return r5

    ; r0 (v3) : Array<i64, 2>
    ; r1 (v1) : i64
    ; r2 (v2) : i64
    ; r3 (v4) : Vec<i64>
    ; r4 (transform(...)) : Iterator<i64, Pure>
    ; r5 (collect(...)) : Vec<i64>
