acvus-mir-test/tests/snapshots/all__inline__inline_callee_uses_builtin_len.snap
---
source: acvus-mir-test/tests/inline.rs
expression: ir
---
=== main ===
     0 |   r0 = array_begin capacity=3
     2 |   r1 = array_push r0 1 (r2)
     4 |   r3 = array_push r1 2 (r4)
     6 |   r5 = array_push r3 3 (r6)
     7 |   assign v9 = r5
     8 |   r7 = ref &v9
     9 |   r8 = call #0(r7)
    10 |   return r8

    ; r0 (v1) : Array<i64, 0>
    ; r1 (v3) : Array<i64, 1>
    ; r2 (v2) : i64
    ; r3 (v5) : Array<i64, 2>
    ; r4 (v4) : i64
    ; r5 (v7) : Array<i64, 3>
    ; r6 (v6) : i64
    ; r7 ($param_1.) : &Array<i64, 3>
    ; r8 (len(...)) : u64
    ; r9 (v9) : Array<i64, 3>
    ; r10 (count(...)) : u64
