acvus-mir-test/tests/snapshots/all__inline__inline_callee_with_filter_lambda.snap
---
source: acvus-mir-test/tests/inline.rs
expression: ir
---
=== main ===
     3 |   r0 = list [1 (r1), -2 (r2), 3 (r3)]
     4 |   r4 = call #0(r0)
     5 |   r5 = call #1(r4)
     6 |   return r5

    ; r0 (v4) : Array<i64, 3>
    ; r1 (v1) : i64
    ; r2 (v2) : i64
    ; r3 (v3) : i64
    ; r4 (positives(...)) : Iterator<i64, Pure>
    ; r5 (collect(...)) : Vec<i64>
