acvus-mir-test/tests/snapshots/all__inline__inline_callee_writes_caller_reads.snap
---
source: acvus-mir-test/tests/inline.rs
expression: ir
---
=== main ===
     0 |   r0 = fetch @count
     1 |   assign @count = r0
     2 |   r1 = take @count
     3 |   commit @count = r1 (not written)
     4 |   r2 = fetch @count
     5 |   assign @count = r2
     6 |   r3 = take @count
     8 |   r4 = r3 + 1 (r5)
     9 |   assign @count = r4
    10 |   r6 = take @count
    11 |   r7 = take @count
    12 |   commit @count = r7
    13 |   r8 = fetch @count
    14 |   assign @count = r8
    15 |   assign x = r6
    16 |   r9 = take x
    17 |   r10 = take @count
    18 |   r11 = r9 + r10
    19 |   r12 = take @count
    20 |   commit @count = r12 (not written)
    21 |   return r11

    ; r0 (@count) : i64
    ; r1 (v4) : i64
    ; r2 (@count) : i64
    ; r3 (@count) : i64
    ; r4 (v15) : i64
    ; r5 (v14) : i64
    ; r6 (@count) : i64
    ; r7 (v17) : i64
    ; r8 (@count) : i64
    ; r9 (x) : i64
    ; r10 (@count) : i64
    ; r11 (v9) : i64
    ; r12 (v10) : i64
    ; r13 (bump(...)) : i64
    ; r14 (@count) : i64
    ; r15 (x) : i64
    ; r16 (@count) : i64
